--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,17 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        configSigning {
+            keyAlias 'ReleaseTestKey'
+            keyPassword 'testzz'
+            storeFile file('release_test_key.jks')
+            storePassword 'testzz'
+        }
+    }
+
     compileSdkVersion 27
+
     defaultConfig {
         applicationId "dawidzior.crypt0track3r"
         minSdkVersion 21
@@ -10,12 +20,15 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.configSigning
         }
     }
+
     compileOptions {
         targetCompatibility 1.8
         sourceCompatibility 1.8
@@ -23,38 +36,27 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
-
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
-
     implementation 'org.projectlombok:lombok:1.16.20'
     implementation 'com.android.support:support-v4:27.1.1'
     annotationProcessor 'org.projectlombok:lombok:1.16.20'
-
     implementation 'com.squareup.picasso:picasso:2.71828'
-
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-
-    implementation "android.arch.lifecycle:extensions:1.1.1"
-    implementation "android.arch.persistence.room:runtime:1.1.1"
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
+    implementation 'android.arch.persistence.room:runtime:1.1.1'
     annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
-
     implementation 'com.firebase:firebase-jobdispatcher:0.8.5'
-
-    implementation "android.arch.navigation:navigation-fragment:1.0.0-alpha04"
-    implementation "android.arch.navigation:navigation-ui:1.0.0-alpha04"
-
+    implementation 'android.arch.navigation:navigation-fragment:1.0.0-alpha04'
+    implementation 'android.arch.navigation:navigation-ui:1.0.0-alpha04'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
-
     implementation 'com.google.android.gms:play-services-ads:15.0.1'
-
     implementation 'com.google.android.gms:play-services-analytics:16.0.1'
-
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
