--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,8 +52,9 @@ dependencies {
     implementation 'android.arch.persistence.room:runtime:1.1.1'
     annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
     implementation 'com.firebase:firebase-jobdispatcher:0.8.5'
-    implementation 'android.arch.navigation:navigation-fragment:1.0.0-alpha04'
-    implementation 'android.arch.navigation:navigation-ui:1.0.0-alpha04'
+//    TODO temporary switched off till stable release of the architecture component.
+//    implementation 'android.arch.navigation:navigation-fragment:1.0.0-alpha04'
+//    implementation 'android.arch.navigation:navigation-ui:1.0.0-alpha04'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
     implementation 'com.google.android.gms:play-services-ads:15.0.1'
     implementation 'com.google.android.gms:play-services-analytics:16.0.1'
