--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <activity android:name=".MainListActivity">
+        <activity android:name=".list.MainListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
+
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
@@ -41,6 +41,9 @@
 
         <service android:name=".widget.UpdateWidgetService"/>
 
+        <!--TODO will delete after stable release of navigation component.-->
+        <activity android:name=".details.DetailsActivity">
+        </activity>
     </application>
 
 </manifest>
